--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "googleapis": "^80.2.0",
     "json": "^11.0.0",
     "nodemon": "^2.0.12",
+    "react-redux": "^7.2.6",
     "swagger-autogen": "^2.10.4",
     "swagger-ui-express": "^4.1.6"
   },
