--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "googleapis": "^80.2.0",
     "json": "^11.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.1",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "react-redux": "^7.2.6",
     "swagger-autogen": "^2.10.4",
